// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for completed members 1`] = `
<Flex
  value={1}
>
  <FlatList
    data={
      Array [
        Object {
          "id": "112",
          "person": Object {
            "id": "112",
          },
        },
        Object {
          "id": "113",
          "person": Object {
            "id": "113",
          },
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    renderItem={[Function]}
    scrollEventThrottle={50}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Flex>
`;

exports[`renders correctly for joined members 1`] = `
<Flex
  value={1}
>
  <FlatList
    data={
      Array [
        Object {
          "id": "111",
          "person": Object {
            "id": "111",
          },
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    renderItem={[Function]}
    scrollEventThrottle={50}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Flex>
`;
